--- a/docs/guidelines/components/FontFamily/FontFamily.scss
+++ b/docs/guidelines/components/FontFamily/FontFamily.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Raleway:wght@400;700&display=swap');
 [font=family][type="section"] {
   [type="rows"] {
     [row] {
