--- a/src/components/FontSize/FontSize.scss
+++ b/src/components/FontSize/FontSize.scss
@@ -1,9 +1,20 @@
 [font=size] {
+  max-width:700px;
+  background-color: rgba(0, 0, 0, 0.05);
+  text-align:center;
+
+  border-radius: 4px;
+  margin-bottom:16px;
+  color:rgb(51, 51, 51);
   > div {
     display:flex;
+    padding: 16px;
     div[token] {
       flex:1;
+      display:flex;
+      flex-direction: column;
       > div {
+        flex:1;
         display:flex;
         flex-direction: column;
         justify-content: flex-end;
@@ -12,6 +23,9 @@
            + label {
 
            }
+        }
+        + label {
+          text-transform:uppercase;
         }
       }
       span {
@@ -25,9 +39,7 @@
         }
       }
 
-      + label {
-        text-transform:uppercase;
-      }
+
     }
   }
 }
