--- a/src/components/Typeface/Typeface.scss
+++ b/src/components/Typeface/Typeface.scss
@@ -4,6 +4,7 @@ div[font=typeface] {
   border-radius: 4px;
   margin-bottom:16px;
   color:rgb(51, 51, 51);
+  max-width:700px;
 
   [face=label] {
     display:flex;
