--- a/src/components/TextStyle/TextStyle.scss
+++ b/src/components/TextStyle/TextStyle.scss
@@ -1,3 +1,89 @@
 div[font=textstyle] {
+  display:flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+  border-bottom: 1px solid lightgrey;
+  padding-bottom: 15px;
 
+  [suffix] {
+    &:after {
+      content:attr(suffix);
+      font-size:10px;
+    }
+  }
+
+  > div {
+    display:flex;
+    align-items: flex-end;
+    span {
+
+    }
+
+    label {
+      text-transform:capitalize;
+      margin-right:8px;
+      display:flex;
+      align-items: flex-end;
+
+      svg {
+        fill:dimgrey;
+      }
+      + span {
+        text-transform: uppercase;
+
+        &[suffix] {
+          &:after {
+
+          }
+        }
+      }
+    }
+
+    > div {
+      label {
+
+      }
+      span {
+
+      }
+    }
+  }
+  [textstyle=label] {
+    text-transform: uppercase;
+    span {
+
+      &[suffix]:after {
+        margin-left:8px;
+        font-size:10px;
+        font-weight:900;
+      }
+
+    }
+  }
+
+  [textstyle=props] {
+    display:flex;
+
+
+    > div {
+      flex:1;
+      display:flex;
+      height:26px;
+      align-items: flex-end;
+      justify-content: flex-start;
+      position:relative;
+
+      label {
+        + span {
+          font-size: 18px;
+          line-height: 12px;
+          position: absolute;
+          bottom: 0px;
+          height: 12px;
+          left: 24px;
+        }
+      }
+
+    }
+  }
 }
