--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 /* TODO: Mixins don't belong here nor does the font importing but docusaurus and their sass plugin where breaking things*/
 @mixin font($font-family, $font-weight, $font-path, $font-weight-int) {
