--- a/src/pages/experiments/coverage_control/styles.scss
+++ b/src/pages/experiments/coverage_control/styles.scss
@@ -1,6 +1,7 @@
 body {
   font-family:"Cabin";
 }
+
 .MuiSlider-root {
   position:relative;
   color:black;
@@ -11,50 +12,75 @@ body {
       text-align:right;
     }
   }
-  &:before {
-    content:attr(labelBefore);
+  &:before, &:after {
     position: absolute;
-    left: 0;
-    bottom: -8px;
 
+    bottom: 0px;
     font-family: Cabin;
     font-size: 10px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 8px;
     letter-spacing: 0px;
-    text-align: left;
+    color:#676C7D;
+  }
 
+  &:before {
+    content:attr(labelBefore);
+    left: 0;
+    text-align: left;
   }
   &:after {
     content:attr(labelAfter);
-    position: absolute;
     right: 0;
-    bottom: -8px;
-
-    font-family: Cabin;
-    font-size: 10px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 16px;
-    letter-spacing: 0px;
     text-align: left;
-
-
-  }
-
-}
-
-[layout=center] {
-  display:flex;
-  justify-content:center;
-  > div {
-
-
   }
 }
 
-[type=coverage] {
-  max-width:550px;
-  padding:10px;
+[container=coverage] {
+  max-width:528px;
+
+  [layout] {
+    margin-bottom:0;
+  }
+
+  [layout=center] {
+    display:flex;
+    justify-content:center;
+  }
+
+  > [container=header]{
+
+  }
+  > [container=body], [container=footer] {
+    margin-top:24px;
+  }
+
+  [container=body] {
+    > div {
+      p:first-child {
+        + [layout=center] {
+          margin-top:24px;
+        }
+      }
+    }
+
+    .MuiCardContent-root:last-child {
+      padding-bottom: 0px;
+    }
+  }
+
+  [container=footer] {
+    > div {
+      [wrapper=slider] {
+        height:34px;
+        position:relative;
+      }
+    }
+  }
+
+  [wrapper=slider] {
+
+  }
 }
+
