--- a/src/components/experiements/coverage_control/CoverageCard.scss
+++ b/src/components/experiements/coverage_control/CoverageCard.scss
@@ -1,3 +1,13 @@
+[card] {
+  span {
+    &[type=separator] {
+      width:50px;
+      text-align: center;
+      padding: 0px 4px;
+    }
+  }
+}
+
 [wrapper=select] {
   .MuiFormControl-root {
     width:100%;
