--- a/src/components/experiements/coverage_control/CoverageCard.scss
+++ b/src/components/experiements/coverage_control/CoverageCard.scss
@@ -18,6 +18,7 @@
   display:flex;
   align-items: center;
   justify-content: center;
+  margin-top: -65px;
   > * {
     flex:initial;
     width:50px;
@@ -34,5 +35,9 @@
     align-items: center;
     justify-content: center;
     display: flex;
+  }
+
+  svg {
+    color: #0B1421;
   }
 }
