--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -200,11 +200,11 @@ body {
 [type=experiments] {
   display:flex;
   padding:0;
-  padding-top:16px;
+  margin-top:8px;
   li {
     margin-right:24px;
     text-transform:uppercase;
-    font-weight:500;
+    font-weight:400;
     color:white;
     height:50px;
     width:100px;
