--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -201,7 +201,10 @@ body {
   display:flex;
   padding:0;
   margin-top:8px;
+  cursor:pointer;
   li {
+    cursor:pointer;
+    
     margin-right:24px;
     text-transform:uppercase;
     font-weight:400;
