--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -31,7 +31,6 @@ body {
       box-shadow: -2px -1px 8px 4px #0000001c;
       z-index: 10;
       width: 225px;
-      height:100vh;
       > div {
         padding:16px;
       }
@@ -100,6 +99,14 @@ body {
 
     [type=page] {
       margin-left:24px;
+
+      [page=footer] {
+        width:100%;
+        height:200px;
+        background:lightgrey;
+
+
+      }
     }
   }
 }
