--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -1,7 +1,7 @@
 //@import url('https://fonts.googleapis.com/css?family=Helvetica');
 
 body {
-  font-family:sans-serif;
+  font-family:Roboto;
   color:black;
   font-weight:500;
 }
@@ -29,10 +29,11 @@ body {
     [type=sidebar] {
       border-right: 1px solid #00000021;
       box-shadow: -2px -1px 8px 4px #0000001c;
-      z-index: 10;
+      z-index: 20;
       width: 225px;
       min-height: 100vh;
-      height: 100%;
+      position:relative;
+      background:rgba(255,255,255,1);
       > div {
         padding:16px;
       }
@@ -102,11 +103,56 @@ body {
       margin-left:24px;
       display: flex;
       flex-direction: column;
+      position:relative;
+      z-index:1;
 
       [page=footer] {
         width:100%;
-        height:200px;
-        background:lightgrey;
+        height:140px;
+        position:relative;
+        &:after {
+          content: "";
+          position: absolute;
+          width: calc(100% + 208px);
+          height: 100%;
+          background: #115dc4;
+          z-index: 0;
+          left: -208px;
+        }
+
+        [layout=columns] {
+          background:rgba(255,255,255,0);
+          display:flex;
+          position:absolute;
+          z-index:10;
+          [column] {
+            flex:1;
+
+            &:first-child {
+              width:300px;
+              flex:initial;
+              padding: 0 0 0 24px;
+            }
+
+            [type=title] {
+              padding:16px 0 8px 0;
+              font-size:18px;
+              font-weight:bold;
+              color:white;
+
+            }
+            [type=links] {
+              display:flex;
+              flex-direction: column;
+              a {
+                color:white;
+                font-weight:500;
+                padding: 2px 0px;
+                display: block;
+              }
+            }
+          }
+        }
       }
     }
   }
