--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -203,6 +203,69 @@ body {
           }
         }
       }
+
+      [layout=grid] {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin:0;
+        flex-direction:column;
+
+        >[grid=title] {
+          font-size:18px;
+          font-weight:300;
+        }
+
+        > ul {
+          padding:0px;
+          margin:0px;
+
+          > li {
+            height: 120px;
+            width: 112px;
+            padding: 8px;
+            cursor: pointer;
+            display: inline-block;
+            text-align: center;
+            user-select: none;
+            border-radius:3px;
+
+            &:hover {
+              background:lightgrey;
+
+              > div {
+                border: 1px solid rgba(255,255,255,.8);
+              }
+            }
+
+            > div {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              height: 100%;
+              border: 1px solid rgba(255,255,255,0);
+              border-radius:3px;
+
+              > span {
+                width: 48px;
+                padding:4px;
+
+                svg {
+                  width:100%;
+                  height:100%;
+                }
+              }
+            }
+          }
+        }
+        hr {
+          display: block;
+          border-top: 1px solid rgba(0,0,0,.12);
+          margin: 16px 0px 16px 0px;
+          flex:initial;
+        }
+      }
     }
   }
 }
