--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -6,7 +6,17 @@ body {
   font-weight:500;
 }
 
+
 [layout=page] {
+  // TODO: Bring in pixel css mixins/utils to
+  //       reduce organic flex box use amound other craziness
+  [truncate] {
+    width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   ul {
     list-style-type: none;
   }
@@ -152,7 +162,6 @@ body {
             }
           }
         }
-
       }
 
       [page=footer] {
@@ -211,7 +220,7 @@ body {
         margin:0;
         flex-direction:column;
 
-        >[grid=title] {
+        [category=title] {
           font-size:18px;
           font-weight:300;
         }
@@ -221,7 +230,6 @@ body {
           margin:0px;
 
           > li {
-            height: 120px;
             width: 112px;
             padding: 8px;
             cursor: pointer;
@@ -243,17 +251,25 @@ body {
               flex-direction: column;
               align-items: center;
               justify-content: center;
-              height: 100%;
+              flex: 1;
+              height: 120px;
               border: 1px solid rgba(255,255,255,0);
               border-radius:3px;
 
-              > span {
-                width: 48px;
-                padding:4px;
+              > div {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex: 1;
 
                 svg {
                   width:100%;
-                  height:100%;
+                  height:40px;
+                }
+
+                + span {
+                  padding: 8px 0;
+                  width: 100%;
                 }
               }
             }
@@ -354,8 +370,6 @@ body {
     }
 
     > div {
-      //flex:1;
-      //width:100%;
       display:flex;
       > [role=tab] {
         width:49%;
