Added transition to the menuy header (guidelines)

--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -394,6 +394,7 @@ $white: #f7f8fc;
             + [class*='TreeItem-label'] {
               > [nav=item] {
                 button {
+                  transition:transform .3s ease;
                   transform: translateX(100px);
                 }
               }
