--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -40,13 +40,14 @@ $white: #f7f8fc;
 
   > div {
     display:flex;
+    $sidebar-width: 225px;
     [type=sidebar] {
       border-right: 1px solid #00000021;
       box-shadow: -2px -1px 8px 4px #0000001c;
       z-index: 20;
-      width: 225px;
+      width: $sidebar-width;
       min-height: 100vh;
-      position:relative;
+      position:fixed;
       background:rgba(255,255,255,1);
       overflow:hidden;
       transition: width .3s ease;
@@ -159,7 +160,8 @@ $white: #f7f8fc;
     }
 
     [type=page] {
-      margin-left:24px;
+      margin-left: calc(#{$sidebar-width} + 24px);
+      transition: margin .3s ease;
       display: flex;
       flex-direction: column;
       position:relative;
@@ -350,13 +352,18 @@ $white: #f7f8fc;
   @media only screen and (max-width: 768px) {
 
     > div {
+
+      $sidebar-width-768: 62px;
       [type=sidebar] {
-        width: 72px;
+        width: $sidebar-width-768;
         [sidebar=header] img {
           width: 200px;
           transform: translateX(-60px) translateY(6px);
           opacity:0;
         }
+      }
+      [type=page] {
+        margin-left:calc(#{$sidebar-width-768} + 24px);
       }
     }
 
