--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -173,8 +173,9 @@ $white: #f7f8fc;
       flex-direction: column;
       position:relative;
       z-index:1;
+      min-height: 100vh;
 
-      > [class*="-page-header"] + div {
+      [class*="-page-header"] + div {
         flex: 1 1 0%;
         margin-top: 26px;
         margin-bottom: 42px;
@@ -224,9 +225,16 @@ $white: #f7f8fc;
           }
         }
       }
+      [page=header] {
+
+      }
+      [page=body] {
+
+      }
 
       [page=footer] {
-        width:100%;
+        width: calc(100% + 24px);
+
         height:140px;
         position:relative;
         &:after {
