--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,17 +1,26 @@
 /* TODO: Mixins don't belong here nor does the font importing but docusaurus and their sass plugin where breaking things*/
-@mixin font($font-family, $font-weight, $font-path, $font-weight-int) {
+@mixin font($font-family, $font-family2, $font-weight, $font-path, $font-weight-int) {
   @font-face {
     font-family: $font-family;
     font-style: normal;
     font-weight: $font-weight-int;
-    src: url($font-path + '/' + $font-family + '-' + $font-weight + '.eot');
-    src: url($font-path + '/' + $font-family + '-' + $font-weight + '.eot?#iefix') format('embedded-opentype'),
-    url($font-path + '/' + $font-family + '-' + $font-weight + '.woff') format('woff'),
-    url($font-path + '/' + $font-family + '-' + $font-weight + '.ttf') format('truetype'),
-    url($font-path + '/' + $font-family + '-' + $font-weight + '.svg#' + $font-family) format('svg');
+    src: url($font-path + '/' + $font-family2 + '-' + $font-weight + '.woff2') format('woff2');
   }
 }
 
-@include font('rtraleway', 'regular', '/fonts/RTRaleway-Regular', 400);
-@include font('rtraleway', 'bold', '/fonts/RTRaleway-Bold', 700);
+@include font('rt raleway', 'rtraleway', 'regular', '/fonts/RTRaleway-Regular', 400);
+@include font('rt raleway', 'rtraleway', 'bold', '/fonts/RTRaleway-Bold', 700);
 @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@400;700');
+
+/*
+@font-face {
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: $font-weight-int;
+    src: url($font-path + '/' + $font-family2 + '-' + $font-weight + '.eot');
+    src: url($font-path + '/' + $font-family2 + '-' + $font-weight + '.eot?#iefix') format('embedded-opentype'),
+    url($font-path + '/' + $font-family2 + '-' + $font-weight + '.woff') format('woff'),
+    url($font-path + '/' + $font-family2 + '-' + $font-weight + '.ttf') format('truetype'),
+    url($font-path + '/' + $font-family2 + '-' + $font-weight + '.svg#' + $font-family) format('svg');
+  }
+ */
