--- a/src/components/experiements/deductible_control/DeductibleCard.scss
+++ b/src/components/experiements/deductible_control/DeductibleCard.scss
@@ -29,7 +29,7 @@
     color: #0B1421;
     font-size: 18px;
     text-align: center;
-    font-family: rtraleway;
+    font-family: "RT Raleway", sans-serif;
     font-weight: 700;
     line-height: 25.2px;
     align-items: center;
