--- a/src/components/PageHeader/PageHeader.scss
+++ b/src/components/PageHeader/PageHeader.scss
@@ -10,4 +10,41 @@ $white: #f7f8fc;
 
 [page=header] {
   margin-bottom:16px;
+
+  nav {
+    margin-top:12px;
+    * {
+      font-size:14px;
+      font-weight:400;
+    }
+    ol{
+      display:flex;
+      margin: 0;
+      padding: 0;
+      li {
+        display:flex;
+        color: $grey-dark;
+        transition: color .3s;
+        text-transform:capitalize;
+
+        > a {
+
+        }
+
+        &:last-child {
+          color: rgba(0,0,0,.65);
+          font-weight:500;
+
+        }
+
+        + span {
+          width:20px;
+          text-align:center;
+        }
+      }
+    }
+  }
+  [page=title] {
+
+  }
 }
