--- a/src/components/AntPage/AntPage.scss
+++ b/src/components/AntPage/AntPage.scss
@@ -42,144 +42,18 @@ $white: #f7f8fc;
   > div {
     display:flex;
     $sidebar-width: 184px;
-    [type=sidebar] {
-      border-right: 1px solid #00000021;
-      box-shadow: -2px -1px 8px 4px #0000001c;
-      z-index: 20;
-      width: $sidebar-width;
-      min-height: 100vh;
-      position:fixed;
-      background:rgba(255,255,255,1);
-      overflow:hidden;
-      transition: width .3s ease;
-
-      * {
-        font-family: "RT Raleway", sans-serif;
-        font-size:16px;
-        font-weight:400;
-      }
-      > div {
-        padding:16px;
-      }
-      [sidebar=header] {
-        display: flex;
-        justify-content: center;
-        padding-top: 16px;
-        height:72px;
-        > a {
-          width: 100%;
-          height: 100%;
-          justify-content: center;
-          display: flex;
-        }
-        img {
-          width:60%;
-          transition: .3s ease;
-        }
-      }
-      [sidebar=body] {
-        margin-top:30px;
-
-        [class*='TreeView-root'] {
-          [class*='TreeItem-content'] {
-              > [class*='TreeItem-iconContainer'] {
-                + [class*='TreeItem-label'] {
-                  text-transform: uppercase;
-                  font-weight:700;
-
-
-                }
-              }
-          }
-        }
-        [class*='TreeItem-content'] {
-          padding:6px 0 6px 0px;
-        }
-        [class*='TreeItem-root'] {
-          &[class*='-selected'] {
-            > div > [class*='TreeItem-label'] {
-              background:rgba(255,255,255,0);
-              > [nav=item] {
-                button{
-                  transition: transform .3s ease;
-                }
-
-                p {
-                  color:#115dc4;
-                  background-color:rgba(255,255,255,0);
-                  font-weight:500;
-                }
-              }
-            }
-          }
-          > div > [class*='TreeItem-label'] {
-            padding-left:0px;
-
-            img {
-              transition: all .3s ease;
-              + span {
-                transition: padding .3s ease;
-                padding-left:8px;
-              }
-            }
-          }
-
-          [class*='TreeItem-group'] {
-            margin-left:0px;
-          }
-        }
-
-        [nav=item] {
-          display:flex;
-          align-items:center;
-          > svg, img {
-            width:16px;
-            height:16px;
-
-            flex:initial;
-            + p {
-              flex:1;
-              margin-left:8px;
-              text-align:left;
-            }
-          }
-
-          [class*='Button-root'] {
-            text-transform:initial;
-            font-family:inherit;
-            width:100%;
-            font-size:initial;
-            font-weight:initial;
-            line-height:initial;
-            letter-spacing:initial;
-            [class*='Button-label'] {
-              justify-content:flex-start;
-            }
-          }
-        }
-        [class*='-iconContainer']:empty {
-          display:none;
-        }
-      }
-      [sidebar=footer] {
-
-      }
-    }
 
     [type=page] {
-      margin-left: calc(#{$sidebar-width} + 24px);
-      padding-right:24px;
-      transition: margin .3s ease;
       display: flex;
       flex-direction: column;
       position:relative;
       z-index:1;
       min-height: 100vh;
+      max-width:100vw;
 
-      [class*="-page-header"] + div {
-        flex: 1 1 0%;
-        margin-top: 26px;
-        margin-bottom: 42px;
+      > [page=header], [page=body] {
+        margin-left: calc(#{$sidebar-width} + 24px);
+        transition: margin .3s ease;
       }
 
       span[class*="-colorSecondary"], span[class*="Tabs-indicator"] {
@@ -191,103 +65,19 @@ $white: #f7f8fc;
 
       > span:first-child {
         float:left;
-
       }
-      nav {
-        margin-top:12px;
-        * {
-          font-size:14px;
-          font-weight:400;
-        }
-        ol{
-          display:flex;
-          margin: 0;
-          padding: 0;
-          li {
-            display:flex;
-            color: rgba(0,0,0,.45);
-            transition: color .3s;
-            text-transform:capitalize;
 
-            > a {
-              color:inherit;
-            }
-
-            &:last-child {
-              color: rgba(0,0,0,.65);
-              font-weight:500;
-
-            }
-
-            + span {
-              width:20px;
-              text-align:center;
-            }
-          }
-        }
-      }
-      [page=header] {
-        .ant-page-header {
-          padding:0 0 16px 0px;
-        }
-        [class*=-page-header-heading-left] {
-          overflow:initial;
-          flex-wrap: wrap;
-        }
-      }
       [page=body] {
         flex:1;
-      }
 
-      [page=footer] {
-        width: calc(100% + 24px);
-
-        height:140px;
-        position:relative;
-        &:after {
-          content: "";
-          position: absolute;
-          width: calc(100% + 208px);
-          height: 100%;
-          background: #115dc4;
-          z-index: 0;
-          left: -208px;
+        [page=section] {
+          margin-top:16px;
         }
-
-        [layout=columns] {
-          background:rgba(255,255,255,0);
-          display:flex;
-          position:absolute;
-          z-index:10;
-          [column] {
-            flex:1;
-
-            &:first-child {
-              width:300px;
-              flex:initial;
-              padding: 0 0 0 0px;
-            }
-
-            [type=title] {
-              padding:16px 0 8px 0;
-              font-size:18px;
-              font-weight:bold;
-              color:white;
-
-            }
-            [type=links] {
-              display:flex;
-              flex-direction: column;
-              a {
-                color:white;
-                font-weight:500;
-                padding: 2px 0px;
-                display: block;
-              }
-            }
-          }
+        [role=tabpanel] {
+          margin-top:16px;
         }
       }
+
       [category=wrapper] {
         hr {
           display: block;
@@ -389,71 +179,16 @@ $white: #f7f8fc;
 
   //&[expanded=false],
   @media only screen and (max-width: 768px) {
-
     > div {
-
       $sidebar-width-768: 62px;
-      [type=sidebar] {
-        width: $sidebar-width-768;
-        [sidebar=header] img {
-          width: 200px;
-          transform: translateX(-60px) translateY(6px);
-          opacity:0;
-        }
-      }
       [type=page] {
-        margin-left:calc(#{$sidebar-width-768} + 24px);
-        width: calc(100% - #{$sidebar-width-768} - 24px);
-      }
-    }
-
-    div[sidebar=header]:after {
-      content: "CSAA Design";
-      position: absolute;
-      transform: rotate( 270deg);
-      width: 220px;
-      font-family: 'Cabin';
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-weight: 400;
-      top: 26px;
-      border-left: 1px solid rgba(0,0,0,.3);
-      padding-left: 18px;
-      color: rgba(0,0,0,.6);
-    }
-
-    [class*='TreeItem-root'] {
-      > div > [class*='TreeItem-label'] {
-        padding-left:0px;
-
-        img {
-          width:24px;
-          height:24px;
-          + span {
-            padding-left:24px !important;
-          }
+        > [page=header], [page=body] {
+          margin-left:calc(#{$sidebar-width-768} + 24px);
+          //width: calc(100% - #{$sidebar-width-768} - 24px);
         }
+
       }
     }
-
-    [sidebar=body] {
-      [class*='TreeView-root'] {
-        [class*='TreeItem-content'] {
-          > [class*='TreeItem-iconContainer'] {
-            + [class*='TreeItem-label'] {
-              > [nav=item] {
-                button {
-                  transition:transform .3s ease;
-                  transform: translateX(100px);
-                }
-              }
-
-            }
-          }
-        }
-      }
-    }
-
   }
 }
 
@@ -468,11 +203,6 @@ $white: #f7f8fc;
   margin-left:initial;
   margin-right:initial;
 }
-@media only screen and (min-width: 997px) {
-  .docItemCol_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
-    max-width:100% !important;
-  }
-}
 
 #catalog {
   [class*='-NavigationBar'] {
@@ -483,7 +213,6 @@ $white: #f7f8fc;
 [layout], .site-card-wrapper {
   background:white;
 
-
   &[type=card] {
     background:transparent;
   }
@@ -491,28 +220,26 @@ $white: #f7f8fc;
     padding-top:0px;
 
     > div {
-      width:100%;
 
     }
   }
   [class*='-Page'] {
-
     [class*='-Page'] {
       margin-left:0px;
     }
   }
 
-  [class*='-page-header'] {
+ // [class*='-page-header'] {
     //padding-left: 0;
     //padding-top: 0;
     //margin-top: 2px;
 
-    [class*='-heading-title'] {
-      font-size:32px;
-      overflow:initial;
-      line-height: initial;
-    }
-  }
+    //[class*='-heading-title'] {
+    //  font-size:32px;
+    //  overflow:initial;
+    //  line-height: initial;
+    //}
+ // }
   [class*='-card-meta'] {
     color: inherit;
   }
@@ -551,32 +278,32 @@ $white: #f7f8fc;
     }
   }
 
-  [class*='-page-header'] {
-    [class*='-heading-tags'] {
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      > span {
-
-      }
-    }
-
-    [class*='-avatar-image'] {
-      height:32px;
-      width:32px;
-      overflow:initial;
-    }
-
-  }
+  //[class*='-page-header'] {
+  //  [class*='-heading-tags'] {
+  //    display: flex;
+  //    align-items: flex-end;
+  //    justify-content: center;
+  //    > span {
+  //
+  //    }
+  //  }
+  //
+  //  //[class*='-avatar-image'] {
+  //  //  height:32px;
+  //  //  width:32px;
+  //  //  overflow:initial;
+  //  //}
+  //
+  //}
 
 
   h4 {
-    &.ant-typography {
-      font-weight: 300;
-      font-size: 17px;
-      margin-top: 32px;
-      opacity: 1;
-    }
+    //&.ant-typography {
+    //  font-weight: 300;
+    //  font-size: 17px;
+    //  margin-top: 32px;
+    //  opacity: 1;
+    //}
     &.footer-title {
       margin-bottom:-16px;
     }
